fix load from file